tests/baselines/reference/superNoModifiersCrash.errors.txt
tests/cases/compiler/superNoModifiersError.ts(3,9): error TS2335: 'super' can only be referenced in a derived class.
tests/cases/compiler/superNoModifiersError.ts(3,29): error TS2461: Type 'IArguments' is not an array type.
tests/cases/compiler/superNoModifiersError.ts(4,21): error TS2339: Property 'asdf' does not exist on type 'Parent'.
tests/cases/compiler/superNoModifiersError.ts(8,7): error TS2415: Class 'Child' incorrectly extends base class 'Parent'.
  Types of property 'initialize' are incompatible.
    Type '() => void' is not assignable to type '() => string'.
      Type 'void' is not assignable to type 'string'.


==== tests/cases/compiler/superNoModifiersError.ts (4 errors) ====
    class Parent {
        initialize() {
            super.initialize(...arguments)
            ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
                                ~~~~~~~~~
!!! error TS2461: Type 'IArguments' is not an array type.
            return this.asdf = ''
                        ~~~~
!!! error TS2339: Property 'asdf' does not exist on type 'Parent'.
        }
      }
    
    class Child extends Parent {
          ~~~~~
!!! error TS2415: Class 'Child' incorrectly extends base class 'Parent'.
!!! error TS2415:   Types of property 'initialize' are incompatible.
!!! error TS2415:     Type '() => void' is not assignable to type '() => string'.
!!! error TS2415:       Type 'void' is not assignable to type 'string'.
        initialize() {
        }
    }